<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Config">

    <TextView
        android:text="@string/nota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nota" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/latitud"
        android:id="@+id/latitud"
        android:layout_below="@+id/nota"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/longitud"
        android:id="@+id/longitud"
        android:layout_below="@+id/latitud"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/proveedor"
        android:id="@+id/proveedor"
        android:layout_below="@+id/longitud"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/altitud"
        android:id="@+id/altitud"
        android:layout_below="@+id/proveedor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/precision"
        android:id="@+id/precision"
        android:layout_below="@+id/altitud"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hora"
        android:id="@+id/hora"
        android:layout_below="@+id/precision"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Zona:"
        android:id="@+id/showzona"
        android:layout_below="@+id/hora"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Nombre de la Zona"
        android:id="@+id/lblname"
        android:layout_below="@+id/showzona"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="15"
        android:id="@+id/zonename"
        android:layout_below="@+id/lblname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/zonename"
        android:layout_alignRight="@+id/zonename"
        android:layout_alignEnd="@+id/zonename">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar Zona"
            android:id="@+id/add"
            android:layout_below="@+id/lblname"
            android:layout_toRightOf="@+id/proveedor"
            android:layout_marginTop="45dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eliminar Zona"
            android:id="@+id/erase"
            android:layout_toRightOf="@+id/add"
            android:layout_marginTop="45dp"/>

        </LinearLayout>


</RelativeLayout>
